# aniwall

./: Cargo.nix  Cargo.toml  LICENSE  PKGBUILD  README.md  flake.nix
src/: cache.rs  cli.rs  commands.rs  config.rs  crop.rs  download.rs  main.rs  process.rs  rating.rs  wallpaper.rs  wallpaper_history.rs  wallpaper_list.rs
src/commands/: download.rs  get.rs  review.rs  set.rs
