[package]
name = "aniwall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
cached = "0.43.0"
chrono = "0.4.24"
clap = { version = "4.2.2", features = ["derive"] }
directories = "5.0.0"
futures = "0.3.28"
glob = "0.3.1"
inquire = "0.6.1"
md5 = "0.7.0"
rand = "0.8.5"
reqwest = { version = "0.11.16", features = ["json", "stream"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
shell-words = "1.1.0"
thiserror = "1.0.43"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "fs", "io-std", "signal"] }
tokio-util = "0.7.8"

